--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   http: ^1.2.1
   logging: ^1.2.0
   flutter_bloc: ^8.1.5
+  get_it: ^7.7.0
+  injectable: ^2.4.2
+  build_runner: ^2.4.11
 
 dev_dependencies:
   flutter_test:
