--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,12 +39,14 @@ dependencies:
   logging: ^1.2.0
   flutter_bloc: ^8.1.5
   get_it: ^7.7.0
+  bloc: ^8.1.4
   injectable: ^2.4.2
-  build_runner: ^2.4.11
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.11
+  injectable_generator: ^2.6.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
